@@ -4,7 +4,7 @@ plugins {
     id "java"
     id "application"
     id "org.openjfx.javafxplugin" version "0.0.8"
-    id "org.beryx.runtime" version "1.8.4"
+    id "org.beryx.runtime" version "1.8.5"
 }
 
 group = "io.github.mzmine"
@@ -188,8 +188,16 @@ javafx {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.compilerArgs += "--enable-preview"
 }
 
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 
 /*
  * Set the basic Java runtime parameters (heap size etc.)
@@ -245,8 +253,8 @@ runtime {
             installerOptions = ["--license-file", "LICENSE.txt"]
         }
         if (OperatingSystem.current().isLinux()) {
-            // rpmbuild and rpm tools need to be installed
-            installerType = ["rpm", "deb"]
+            // for rpm, rpmbuild and rpm tools need to be installed, installerType needs to be set to "rpm"
+            installerType = "deb"
             // additional options for jpackage
             imageOptions = ["--icon", "src/main/resources/MZmineIcon.png"]
             installerOptions = ["--linux-shortcut",
@@ -264,7 +272,8 @@ runtime {
                    "-XX:MinRAMPercentage=80",
                    "-XX:MaxRAMPercentage=80",
                    "-enableassertions",
-                   "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
+                   "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
+                   "--enable-preview"
         ]
     }
 }
